# TinaFlow

./: .gitignore  CMakeLists.txt  README.md
cmake/: generate_unified_shader_header.cmake  manage_shaders.cmake  simple_shaders.cmake
include/: BaseDisplayModel.hpp  BaseNodeModel.hpp  BgfxBlockRenderer.hpp  BgfxGeometry.hpp  BgfxManager.hpp  BgfxResourceManager.hpp  BgfxVertexTypes.hpp  BgfxWidget.hpp  Block.hpp  ColumnSelectorModel.hpp  Command.hpp  CommandHistoryWidget.hpp  CommandManager.hpp  CompositeCommand.hpp  CustomComboBox.hpp  DataValidator.hpp  DisplayBooleanModel.hpp  DisplayCellListModel.hpp  DisplayCellModel.hpp  DisplayRangeModel.hpp  DisplayRowModel.hpp  ErrorHandler.hpp  ForEachRowModel.hpp  IPropertyProvider.hpp  IconManager.hpp  ModernToolBar.hpp  NodeCatalog.hpp  NodeCommands.hpp  NodePalette.hpp  OpenExcelModel.hpp  PerformanceProfiler.hpp  PropertyWidget.hpp  QSkiaOpenGLWidget.h  RangeInfoModel.hpp  RangeIteratorModel.hpp  ReadCellModel.hpp  ReadRangeModel.hpp  SaveExcelModel.hpp  SelectSheetModel.hpp  SkiaRenderer.hpp  (+5 more)
include/data/: BooleanData.hpp  CellData.hpp  CellListData.hpp  IntegerData.hpp  RangeData.hpp  RowData.hpp  SheetData.hpp  ValueData.hpp  WorkbookData.hpp
include/model/: BaseDisplayModel.hpp  BaseFilterModel.hpp  BaseNodeModel.hpp  BlockScriptModel.hpp  CellFilterModel.hpp  ConstantValueModel.hpp  DisplayBooleanModel.hpp  DisplayCellModel.hpp  IfElseModel.hpp  LogicalAndModel.hpp  LogicalNotModel.hpp  LogicalOrModel.hpp  NumberCompareModel.hpp  OpenExcelModel.hpp  RangeInfoModel.hpp  ReadCellModel.hpp  ReadRangeModel.hpp  SaveExcelModel.hpp  SelectSheetModel.hpp  SmartLoopProcessorModel.hpp  SmartReadRangeModel.hpp  StringCompareDoubleModel.hpp  StringCompareModel.hpp  UniversalCompareModel.hpp  ValueFilterModel.hpp
include/widget/: ADSPanelManager.hpp  ADSPropertyPanel.hpp  BlockProgrammingView.hpp  CommandHistoryWidget.hpp  ModernToolBar.hpp  PanelContainer.hpp  PropertyPanelContainer.hpp  PropertyWidget.hpp  StyledLineEdit.hpp
resources/: icons.qrc
resources/shaders/: fs_rounded.sc  varying.def.sc  vs_rounded.sc
src/: BgfxBlockRenderer.cpp  BgfxGeometry.cpp  BgfxManager.cpp  BgfxResourceManager.cpp  BgfxVertexTypes.cpp  BgfxWidget.cpp  Block.cpp  ColumnSelectorModel.cpp  CommandHistoryWidget.cpp  CommandManager.cpp  CompositeCommand.cpp  DataValidator.cpp  DisplayCellListModel.cpp  ErrorHandler.cpp  IconManager.cpp  ModernToolBar.cpp  NodeCatalog.cpp  NodeCommands.cpp  NodePalette.cpp  PropertyWidget.cpp  QSkiaOpenGLWidget.cpp  RangeIteratorModel.cpp  SaveExcelModel.cpp  SkiaRenderer.cpp  SmartLoopProcessorModel.cpp  TinaFlowGraphicsView.cpp  main.cpp  mainwindow.cpp
src/model/: BlockScriptModel.cpp  CellFilterModel.cpp  DisplayCellListModel.cpp  SaveExcelModel.cpp  SmartLoopProcessorModel.cpp  SmartReadRangeModel.cpp  ValueFilterModel.cpp
src/widget/: ADSPanelManager.cpp  ADSPropertyPanel.cpp  BlockProgrammingView.cpp  CommandHistoryWidget.cpp  PropertyPanelContainer.cpp  PropertyWidget.cpp  StyledLineEdit.cpp
ui/: mainwindow.ui
